# pingparser

./: .gitignore  LICENSE  README.md  check.py  containers.py  general.py  permtest.py  pyproject.toml  requirements.txt  runningval.py  scrapers.py  touch.py  touch_Lorena.py
.ipynb_checkpoints/: sandbox-checkpoint.ipynb
dailyautoproc/: autoproc.py  autoproc_v02.py  run_autoproc.ps1
dailyautoproc/configs/: config_v05.yaml  config_v06.yaml  config_v08.yaml  config_v09.yaml
event_extractors/: lorena.py  touch.py  touch_v02.py  touch_v03.py  touch_v04.py  touch_v05.py
extractors/Events/: v01.py  v03.py  v04.py  v07.py  v09.py
extractors/Events/Grid/: v01.py
extractors/Touch_xy_bs/: touch_v01.py  v02.py
extractors/Touch_xy_bs/Grid/: v01.py
extractors/events/: lorena.py  touch_v05.py  touch_v06.py
extractors/events/Stick/: v05.py  v08.py  v09.py
extractors/lorena/: general.py  lorena_v01.py
sandbox/: Events_lp04_2023-03-05T17_47_59.csv  TouchXYbs_lp04_2023-03-05T17_47_59.csv  sandbox.ipynb
sandbox/.ipynb_checkpoints/: sandbox-checkpoint.ipynb
src/dailyautoproc/: autoproc_stick_v01.py
src/dailyautoproc/configs/: config_v07.yaml  config_v08.yaml  config_v10.yaml  config_v11.yaml  config_v12.yaml
src/dailyautoproc/scripts/: run_autoproc.ps1
src/pingparser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pingparser/core/: check.py  runningval.py  scrapers.py
src/pingparser/extractors/Events/: v09.py  v10.py  v11.py  v12.py
src/pingparser/extractors/Touch_xy_bs/: v01.py  v02.py
swm/: lorena.py  touch.py
tracking/: lorena.py  touch.py
(+3 files in other folders)
